--- a/databindingdemo/build.gradle
+++ b/databindingdemo/build.gradle
@@ -3,8 +3,6 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
 
-
-
     defaultConfig {
         applicationId "com.example.databindingdemo"
         minSdkVersion 26
@@ -21,6 +19,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    dataBinding {
+        enabled =true
     }
 
 }
