Rxjava第一次提交

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':recyclerviewcomponents', ':databindingdemo'
+include ':app', ':recyclerviewcomponents', ':databindingdemo', ':rxjavademo'
