--- a/retrofit2/build.gradle
+++ b/retrofit2/build.gradle
@@ -33,4 +33,15 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    implementation "com.squareup.retrofit2:retrofit:2.5.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.5.0"
+    implementation "com.squareup.okhttp3:okhttp:3.13.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.13.1"
+    implementation "com.alibaba:fastjson:1.1.70.android"
+    implementation "com.google.code.gson:gson:2.8.5"
 }
