--- a/rxjavademo/src/main/AndroidManifest.xml
+++ b/rxjavademo/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.rxjavademo">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -27,8 +29,12 @@
         <!--  组合操作符demo
          1、CombineOperatorDemo1 ：从磁盘 / 内存缓存中 获取缓存数据
          2、
-         3、-->
-        <activity android:name=".demo.CombineOperatorDemo1">
+         3、
+        <activity android:name=".demo.CombineOperatorDemo1"> -->
+
+        <!-- 功能操作符主要使用的activity -->
+        <activity android:name=".operator.FunctionOperator">
+
 
 
             <intent-filter>
