--- a/rxjavarxtrofitokhttp/build.gradle
+++ b/rxjavarxtrofitokhttp/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.application'
 
+
+final API_SERVER_DEV = "https://emap.mychery.com:4430/test/api/v2/"
+
 android {
     compileSdkVersion 28
 
@@ -7,10 +10,11 @@ android {
 
     defaultConfig {
         applicationId "com.example.rxjavarxtrofitokhttp"
-        minSdkVersion 26
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -23,14 +27,35 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor "com.jakewharton:butterknife-compiler:8.8.1"
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation "com.squareup.retrofit2:retrofit:2.5.0"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.5.0"
+    implementation "com.squareup.okhttp3:okhttp:3.13.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:3.13.1"
+    implementation "com.alibaba:fastjson:1.1.70.android"
+    implementation "com.google.code.gson:gson:2.8.5"
+
+    //rxJava lifecycle
+    implementation "io.reactivex.rxjava2:rxjava:2.1.2"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation "org.greenrobot:eventbus:3.0.0"
+    implementation "javax.annotation:jsr250-api:1.0"
+    implementation "com.trello.rxlifecycle2:rxlifecycle:2.1.0"
+    implementation "com.trello.rxlifecycle2:rxlifecycle-components:2.1.0"
 }
